src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__regproc__cast_reg_class_to_oid__impl.snap
---
source: src/expr/src/scalar/func/impls/regproc.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Oid,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Oid,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastOidToRegClass(
            CastOidToRegClass,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
